apps/prod/rbx-landing-briefing-btc/middleware-https.yml
# Traefik Middleware: HTTP -> HTTPS redirect
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: rbx-landing-briefing-btc
spec:
  redirectScheme:
    scheme: https
    permanent: true
