apps/prod/rbx-landing-briefing-btc/rbx-landing-briefing-btc-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-landing-briefing-btc
  namespace: rbx-landing-briefing-btc
  labels:
    app.kubernetes.io/name: rbx-landing-briefing-btc
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: rbx-landing-briefing-btc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rbx-landing-briefing-btc
  ports:
    - name: http
      port: 80
      targetPort: 8080
